--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,26 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
     "core-js": "^3.6.5",
-    "roboto-fontface": "*",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuetify": "^3.0.0-alpha.0",
-    "vuex": "^4.0.0-0",
-    "webfontloader": "^1.0.0"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~5.0.0-beta.3",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-service": "~4.5.0",
     "node-sass": "^4.12.0",
-    "sass": "^1.38.0",
+    "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.3",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "browserslist": [
     "> 1%",
