--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "python-shell": "^3.0.1"
   }
 }
